<?xml version="1.0"?>
<package>
    <name>stereo_image</name>
    <version>0.0.0</version>
    <description>A stereo image package for DJI and FLIR SDK</description>

    <maintainer email="daniel_regner@hotmail.com">Daniel Regner</maintainer>

    <license>ASL 2.0</license>

    <url type="website">https://github.com/dregner</url>


    <author email="daniel_regner@hotmail.com">Daniel Regner</author>

    <buildtool_depend>catkin</buildtool_depend>




    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>actionlib_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>dji_osdk_ros</build_depend>
    <build_depend>stereo_vant</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>rqt_gui</run_depend>
    <run_depend>actionlib_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>dji_osdk_ros</run_depend>
    <run_depend>stereo_vant</run_depend>



    <export>
    </export>
</package>

